# xtab-pro

./: .gitignore  BOT_SETUP.md  README.md  azure-pipelines.yml  bot.js  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: deploy-docs.yml
assets/: BRAND-KIT-README.md  lmg.brand.json  site-dark.webmanifest
assets/config/: IRI_DEV.workspace  Manage Contacts - Export.csv  document.json  iri-dev.json  lmg.brand.json  main-29500be8.js  main_tree_asset_index.csv  main_tree_asset_index.json  unified_branding.json  unified_branding.txt  unified_branding.xml  unified_branding_v2.json
assets/favicon-kit/: Generate-Favicon.ps1  icons-favicons-site-dark.webmanifest  site-dark.webmanifest  site.webmanifest
assets/legal/: ASSET_INDEX.txt  README.txt
dis/: server.js
docs/: index.html  style.css
extension/: extension-background.js  manifest.json
extension/Brand_Icons/: site.webmanifest
public/: manifest.webmanifest
scripts/: prepare-extension.mjs
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  file-system.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: EditorCanvas.jsx  ExplorerPanel.jsx  TabStrip.jsx
src/core/: FileIO.js  MonacoConfig.js
src/styles/: global.css
