[package]
name = "xtab-pro"
version = "0.1.0"
description = "A lightweight browser-native IDE powered by Monaco and local file access."
authors = ["xTab Pro"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xtab_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["shell-open", "dialog-open"] }
tauri-plugin-log = "2"
